--- a/samples/app/src/main/res/layout/activity_sample_full_creen.xml
+++ b/samples/app/src/main/res/layout/activity_sample_full_creen.xml
@@ -18,6 +18,7 @@
     android:id="@+id/danmakuView"
     android:layout_width="match_parent"
     android:layout_height="0dp"
+      android:background="@color/teal_700"
     app:layout_constraintBottom_toTopOf="@id/controllerLayout"
     app:layout_constraintTop_toTopOf="parent" />
 
