--- a/samples/app/src/main/res/layout/danmaku_controller_layout.xml
+++ b/samples/app/src/main/res/layout/danmaku_controller_layout.xml
@@ -150,5 +150,15 @@
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toBottomOf="@id/rollingSwitch" />
 
+  <androidx.appcompat.widget.SwitchCompat
+      android:id="@+id/partSwitch"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:textColor="@color/white"
+      android:checked="false"
+      android:text="半屏"
+      app:layout_constraintStart_toEndOf="@id/overlapSwitch"
+      app:layout_constraintTop_toBottomOf="@id/rollingSwitch" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
