--- a/samples/app/src/main/res/layout/activity_main.xml
+++ b/samples/app/src/main/res/layout/activity_main.xml
@@ -28,14 +28,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-      android:id="@+id/entryFullScreenStep"
-      android:layout_width="240dp"
-      android:layout_height="48dp"
-      android:layout_marginTop="16dp"
-      android:text="Goto FullScreen Step"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/entryFullScreen"/>
+        android:id="@+id/entryFullScreenStep"
+        android:layout_width="240dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="16dp"
+        android:text="Goto FullScreen Step"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/entryFullScreen" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -46,5 +46,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/label"
         tools:ignore="ContentDescription" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/dragon_ball_1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="ContentDescription" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
